--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,14 +2,22 @@ body{
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     justify-items: center;
+    
+    padding-bottom: 10px;
     border: solid 2px;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
     margin-left: 30vw;
     margin-right: 30vw;
     background-color: rgb(135, 201, 228);
     
-   
-    
+}
+section {
+    background-color: rgb(80, 168, 202);
+    padding: 15px;
+    border-radius: 10%;
 }
 
 @media screen and (max-width: 700px){
