--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@ body{
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
     justify-items: center;
-    
+    border-radius: 15px;
     padding-bottom: 10px;
     border: solid 2px;
     margin-top: 15vh;
@@ -20,9 +20,34 @@ section {
     border-radius: 10%;
 }
 
+nav {
+    display: flex;
+    border-radius: 10%;
+    background-color: rgb(80, 168, 202);
+    padding: 2px;
+}
+
+a{
+    text-decoration: none;
+}
+
+button {
+    margin: 5px;
+    padding: 3px;
+    border-radius: 5px;
+    background-color: rgb(117, 181, 221);
+    text-decoration: none;
+    font-size: 15px;
+}
 @media screen and (max-width: 700px){
     body{
         margin-left: 5vw;
         margin-right: 5vw;
+    }
+
+    section {
+        background-color: rgb(80, 168, 202);
+        padding: 5px;
+        border-radius: 3%;
     }
 }
